# python-puzzle-book

erlang/src/: p1.erl  p3.erl  p4.erl  p5.erl  p6.erl  p7.erl  p8.erl  p9.erl
erlang/test/: p1_test.erl  p4_test.erl  p5_test.erl  p6_test.erl  p7_test.erl  p8_test.erl  p9_test.erl
python/: pyproject.toml
python/challenge_puzzles/starter_code/: _2.py  _2_test.py  _3.py  _3_test.py  _5.py  _5_test.py  _8.py  _8_test.py  _9.py  _9_test.py
