[project]
name = "python-puzzle-book"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "black (>=25.11.0,<26.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]

[tool.poetry]
package-mode = false

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
